1a figura utilizando mathcha.io, segmentando melhor os tópicos e criando comandos

--- a/Packages.tex
+++ b/Packages.tex
@@ -33,9 +33,13 @@
 \fancyfoot{}
 \fancyhead[R]{\thepage}
 \renewcommand{\headrulewidth}{0pt}
-
+\setlength{\headheight}{14.5pt}
 % \uptau
 \usepackage{upgreek}
 
 % Para til abaixo de um símbolo
 \usepackage{undertilde}
+
+\usepackage{tikz}
+% Habilitar o uso de hyperlink
+%\usepackage{hyperref}
