--- a/index.tex
+++ b/index.tex
@@ -1,9 +1,12 @@
 \documentclass[12pt, a4paper]{article}
 
 \input{Packages.tex}
+\input{Commands.tex}
 
 \begin{document}
 
-	\input{Estudo-das-deformações.tex}
+	%\tableofcontents
+
+	\input{estudo-das-deformações/estudo-das-deformações.tex}
 
 \end{document}
