--- a/estudo-das-deformações/considerações-iniciais.tex
+++ b/estudo-das-deformações/considerações-iniciais.tex
@@ -1,3 +1,10 @@
+\begin{figure}[H]
+	\centering
+	\caption{Considerações iniciais de corpo/sólido.}
+	\vspace*{5mm}
+	\input{estudo-das-deformações/figuras/considerações-iniciais.tex}
+\end{figure}
+
 \begin{itemize}
 	\item Configuração do sólido: posição ocupada pelos pontos em um determinado instante $t$;
 	\item Descrever a configuração deformada ($V$) a partir de uma configuração de referência ($V^r$);
