2 figuras - exemplo 1 de estudo das deformações

--- a/estudo-das-deformações/considerações-iniciais.tex
+++ b/estudo-das-deformações/considerações-iniciais.tex
@@ -32,9 +32,13 @@ Seja $f$ uma função que associa a posição de cada ponto na configuração $V
 
 Aqui, o circunflexo denota \textit{em função de}, \textit{i.e.}, a coordenada $i$ da posição deformada está em função das coordenadas da posição de referência.
 	
-Exemplo: Considere um sólido cuja seção no plano $\vt{e}_1$, $\vt{e}_2$ é dado por:
+\textbf{Exemplo}: Considere um sólido cuja seção no plano $\vt{e}_1$, $\vt{e}_2$ é dada por:
 	
-//Inserir imagem
+\begin{figure}[H]
+	\centering
+	%\vspace*{5mm}
+	\input{estudo-das-deformações/figuras/exemplo-1.tex}
+\end{figure}
 	
 Caracterize os seguintes campos de deslocamento:
 	
@@ -63,8 +67,12 @@ Resolução:
 		\begin{cases} x^1=x^{r1}+u_1=x^{r1}+\Delta \\ x^2=x^{r2}+u_2=x^{r2} \\ x^3=x^{r3}+u_3=x^{r3}
 		\end{cases}
 		\]
-	\item
-		//Inserir imagem
+	\item A rotação de corpo rígido em torno de $\vt{e}_3$ de intensidade $\varphi$ pode ser descrita como:
+		\begin{figure}[H]
+			\centering
+			%\vspace*{5mm}
+			\input{estudo-das-deformações/figuras/exemplo-1-b.tex}
+		\end{figure}
 			
 		A configuração de referência:
 		\[x^{r1}=r\cdot \cos\theta\]
