figura - deformação normal de uma fibra

--- a/estudo-das-deformações/deformação-normal-e-por-cisalhamento.tex
+++ b/estudo-das-deformações/deformação-normal-e-por-cisalhamento.tex
@@ -1,4 +1,9 @@
-//Inserir imagem
+\begin{figure}[H]
+	\centering
+	\caption{Deformação normal de uma fibra.}
+	\vspace*{5mm}
+	\input{estudo-das-deformações/figuras/deformação-normal-de-uma-fibra.tex}
+\end{figure}
 
 O assunto agora são fibras; como as fibras sofrem deformação. Seja $d\vt{x}^r$ o vetor infinitesimal que representa uma fibra a partir do ponto $\vt{x}^r$; $d\vt{x}$ o vetor infinitesimal da mesma fibra agora na configuração deformada, partindo do ponto $\vt{x}$.
 Para que o vetor $d\vt{x}^r$ deforme e se transforme em $d\vt{x}$, deve ocorrer uma transformação que depende de $\vt{x}^r+d\vt{x}^r$, \textit{i.e.}, uma transformação $\vt{u}(\vt{x}^r+d\vt{x}^r)$.
