adicionando mais figuras

--- a/estudo-das-deformações/deformação-normal-e-por-cisalhamento.tex
+++ b/estudo-das-deformações/deformação-normal-e-por-cisalhamento.tex
@@ -107,7 +107,10 @@ Lembrete sobre operadores lineares:
 $\ts{F}$ e $\nabla\vt{u}$  são operadores lineares de $E\rightarrow E$. Seja $\ts{T}$ um operador linear:
 \[\ts{T}(\alpha\vt{x}+\beta\vt{y})=\alpha\ts{T}\vt{x}+\beta\ts{T}\vt{y},\;\forall\;\vt{x}\text{ e }\vt{y}\in\text{$E$}\]
 
-//Inserir imagem
+\begin{figure}[H]
+	\centering
+	\input{estudo-das-deformações/figuras/operador-linear.tex}
+\end{figure}
 
 \[
 	\begin{Bmatrix}
