--- a/estudo-das-deformações/variação-do-ângulo-entre-fibras-distorção.tex
+++ b/estudo-das-deformações/variação-do-ângulo-entre-fibras-distorção.tex
@@ -1,4 +1,9 @@
-//Inserir imagem
+\begin{figure}[H]
+	\centering
+	\caption{Variação do ângulo entre fibras inicialmente ortogonais.}
+	\vspace*{5mm}
+	\input{estudo-das-deformações/figuras/variação-do-ângulo-entre-fibras.tex}
+\end{figure}
 
 \begin{itemize}
     \item $d\utilde{\mathbf{a}}^r$ e $d\utilde{\mathbf{b}}^r$ são inicialmente ortogonais;
