--- a/Commands.tex
+++ b/Commands.tex
@@ -1,2 +1,3 @@
 \newcommand{\vt}[1]{\utilde{\mathbf{#1}}}
+\newcommand{\vth}[1]{\hat{\utilde{\mathbf{#1}}}}
 \newcommand{\ts}[1]{\underline{\mathbf{#1}}}
